<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_your_email"
        android:textSize="16sp"
        android:autofillHints=""
        android:inputType="" />


    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_your_password"
        android:textSize="16sp"
        android:autofillHints=""
        android:inputType="" />


    <EditText
        android:id="@+id/passwordCheckerET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_your_password_agin"
        android:textSize="16sp"
        android:autofillHints=""
        android:inputType="" />

</LinearLayout>